// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes value 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="branches.detection_of_long_living_branches"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      branches.detection_of_long_living_branches
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="big-spacer-bottom"
      >
        branches.detection_of_long_living_branches.description
      </div>
      <div
        className="big-spacer-bottom"
      >
        <input
          autoFocus={true}
          className="input-super-large"
          onChange={[Function]}
          required={true}
          type="text"
          value="release-.*"
        />
        <div
          className="note spacer-top"
        >
          settings._default
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={true}
        type="submit"
      >
        save
      </button>
      <a
        href="#"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`resets value 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="branches.detection_of_long_living_branches"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      branches.detection_of_long_living_branches
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="big-spacer-bottom"
      >
        branches.detection_of_long_living_branches.description
      </div>
      <div
        className="big-spacer-bottom"
      >
        <input
          autoFocus={true}
          className="input-super-large"
          onChange={[Function]}
          required={true}
          type="text"
          value="release-.*"
        />
        <div
          className="note spacer-top"
        >
          settings.default_x.branch-.*
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        className="pull-left"
        onClick={[Function]}
        type="reset"
      >
        reset_to_default
      </button>
      <button
        disabled={true}
        type="submit"
      >
        save
      </button>
      <a
        href="#"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;
